; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_planner_import.c_ts_estimate_hashagg_tablesize.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_planner_import.c_ts_estimate_hashagg_tablesize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Path = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.AggClauseCosts = type { i32, i64 }

@SizeofMinimalTupleHeader = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ts_estimate_hashagg_tablesize(%struct.Path* %0, %struct.AggClauseCosts* %1, double %2) #0 {
  %4 = alloca %struct.Path*, align 8
  %5 = alloca %struct.AggClauseCosts*, align 8
  %6 = alloca double, align 8
  %7 = alloca i64, align 8
  store %struct.Path* %0, %struct.Path** %4, align 8
  store %struct.AggClauseCosts* %1, %struct.AggClauseCosts** %5, align 8
  store double %2, double* %6, align 8
  %8 = load %struct.Path*, %struct.Path** %4, align 8
  %9 = getelementptr inbounds %struct.Path, %struct.Path* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @MAXALIGN(i32 %12)
  %14 = load i32, i32* @SizeofMinimalTupleHeader, align 4
  %15 = call i64 @MAXALIGN(i32 %14)
  %16 = add i64 %13, %15
  store i64 %16, i64* %7, align 8
  %17 = load %struct.AggClauseCosts*, %struct.AggClauseCosts** %5, align 8
  %18 = getelementptr inbounds %struct.AggClauseCosts, %struct.AggClauseCosts* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* %7, align 8
  %21 = add i64 %20, %19
  store i64 %21, i64* %7, align 8
  %22 = load %struct.AggClauseCosts*, %struct.AggClauseCosts** %5, align 8
  %23 = getelementptr inbounds %struct.AggClauseCosts, %struct.AggClauseCosts* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i64 @hash_agg_entry_size(i32 %24)
  %26 = load i64, i64* %7, align 8
  %27 = add i64 %26, %25
  store i64 %27, i64* %7, align 8
  %28 = load i64, i64* %7, align 8
  %29 = uitofp i64 %28 to double
  %30 = load double, double* %6, align 8
  %31 = fmul double %29, %30
  %32 = fptoui double %31 to i64
  ret i64 %32
}

declare dso_local i64 @MAXALIGN(i32) #1

declare dso_local i64 @hash_agg_entry_size(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
